# cloud-data-docs-assistant

./: .claudeignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  init-db.sql  pyproject.toml  ruff.toml
docs/: JOURNAL.md  SPEC.md  dataset-report.md
scripts/: build_dataset_report.py  index_dataset.py  reprocess_snowflake.py  scrape_snowflake.py  verify_setup.py
src/cloud_data_docs/: __init__.py
src/cloud_data_docs/common/: __init__.py  config.py  logging.py
src/cloud_data_docs/db/: __init__.py  connection.py  migrations.py
src/cloud_data_docs/evaluation/: __init__.py
src/cloud_data_docs/frontend/: __init__.py
src/cloud_data_docs/generation/: __init__.py
src/cloud_data_docs/ingestion/: __init__.py  chunker.py  embedder.py  indexer.py  models.py  pipeline.py
src/cloud_data_docs/ingestion/extractors/: __init__.py  trafilatura_extractor.py
src/cloud_data_docs/ingestion/scrapers/: __init__.py  base.py  snowflake.py
src/cloud_data_docs/retrieval/: __init__.py
tests/: test_chunker.py  test_embedder.py  test_ingestion.py  test_smoke.py
